# selenium_elec

./: .gitignore  cust_lst.txt  hanjeon.py  main.py  pyproject.toml  spread.py
scrapper/: __init__.py  scrapper.py
